2006-04-28  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent):
	* src/display.c:
	* include/compiz.h:
	Add show desktop binding. (Martin Szulecki)

	* plugins/rotate.c: Reset timout handle correctly.

	* plugins/move.c:
	* plugins/resize.c:
	* plugins/rotate.c:
	* plugins/scale.c:
	* plugins/switcher.c:
	* plugins/water.c:
	* plugins/zoom.c: Track screen grab changes changes.

	* src/screen.c:
	* include/compiz.h: Associate all screen grabs with a name. Add
	otherScreenGrabExist function which can be used to check if screen
	is grabbed by other plugins.

2006-04-28  Dan Winship  <danw@novell.com>

	* src/event.c (eventMatches): new method that replaces EV_KEY and
	EV_BUTTON. Tests if an event matches a binding, being more precise
	about modifier state than EV_KEY and EV_BUTTON were.
	(eventTerminates): Tests if an event is "the opposite" of a
	binding. (Eg, button or modifier key release.) Replaces
	CompReleaseMask and "terminate" bindings.
	(handleEvent): Use eventMatches

	* src/screen.c (addPassiveKeyGrab, removePassiveKeyGrab,
	updatePassiveKeyGrabs): When passed a keybinding containing just
	modifiers, grab/ungrab every keypress event that would result in
	that modifier state (eg, both left and right modifier keys, and
	allow them to be pressed in any order).

	* src/display.c: Remove CompPressMask from default bindings.
	(eventLoop): don't add virtual modifiers to event state.
	(updateModifierMappings): store the XModifierKeymap for later
	use.
	
	* plugins/*.c: Use eventMatches and eventTerminates. Remove
	CompPressMask and "terminate" bindings (except from scale, which
	is different from the others).

	* plugins/switcher.c: Make initiate_all be just the modifier key
	used in addition to the initiate binding ("<Control>"). Remove
	next_window since it doesn't make a lot of sense to have it be
	different from initiate_all, and make prev_window be just a
	modifier key as well. ("<Shift>").